--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@ body{
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    
+    justify-content: center; 
 }
 
 header h1{
@@ -24,8 +23,7 @@ header h1{
     padding-bottom: 20px;
     font-family: "Lilita One", sans-serif;
     color:#512f19;
-    font-size: 2.8em;
-    
+    font-size: 2.8em;  
 }
 
 section input{ 
@@ -37,6 +35,7 @@ section input{
     color: #45474B;
     box-sizing: border-box;
     margin-bottom: 10px;
+    box-shadow:  1px 1px 3px rgba(0, 0, 0, 0.507);
 
 }
 
@@ -60,7 +59,7 @@ section button:hover{
     min-width: 320px;
     margin: auto;
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .item-resultados{
@@ -84,7 +83,8 @@ section button:hover{
   }
   
 aside img {
-    width: 280px; /* Ajuste a largura conforme necessário */
+    width: 280px; 
+    border-radius: 10px;/* Ajuste a largura conforme necessário */
   }
 
 h2{
@@ -121,6 +121,7 @@ footer{
 }
 
 footer p{
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-bottom: 10px;
 
