--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ header{
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.568);
 }
 header h1{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding:30px;
     font-family: "Lilita One", sans-serif;
     color:#512f19;
     font-size: 2.8em;  
