--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body{
     background-color: #f0e68c67;
-    background-image: url(imagens/designer2.jpeg);
+    background-image: url(imagens/Designer.jpeg);
     background-repeat: no-repeat;
     background-position: top center;
     background-attachment: fixed;
